styles: fix z-index for windows and modal windows

--- a/src/game/gui/windows/Window.sass
+++ b/src/game/gui/windows/Window.sass
@@ -1,7 +1,7 @@
 .modal-window__container
   position: fixed
   inset: 0
-  z-index: 99
+  z-index: 100
 
   background-color: rgba(0 0 0 / .7)
 
